# Bearpi_Hi3863_Pico

./: .gitignore  CMakeLists.txt  README.md  build.py  config.in  hi3863-nlchat.hiproj
drivers/boards/: CMakeLists.txt  Kconfig
drivers/boards/ws63/: CMakeLists.txt  Kconfig
drivers/boards/ws63/evb/: CMakeLists.txt
drivers/boards/ws63/evb/board_config/: CMakeLists.txt  board_evb.h  boards.h
drivers/boards/ws63/evb/linker/: CMakeLists.txt
drivers/boards/ws63/evb/memory_config/: CMakeLists.txt
drivers/drivers/: CMakeLists.txt  Kconfig
drivers/drivers/driver/: CMakeLists.txt
drivers/drivers/driver/adc/: CMakeLists.txt  Kconfig  adc.c
drivers/drivers/driver/dma/: CMakeLists.txt  Kconfig  dma.c
drivers/drivers/driver/efuse/: CMakeLists.txt  efuse.c
drivers/drivers/driver/gpio/: CMakeLists.txt  Kconfig  gpio.c
drivers/drivers/driver/i2c/: CMakeLists.txt  Kconfig  i2c.c
drivers/drivers/driver/i2s/: CMakeLists.txt  Kconfig  i2s.c
drivers/drivers/driver/lpm/: CMakeLists.txt  lpm_dev_ops.c  lpm_dev_ops.h
drivers/drivers/driver/pinmux/: CMakeLists.txt  Kconfig  pinctrl.c
drivers/drivers/driver/pmp/: CMakeLists.txt  pmp.c
drivers/drivers/driver/pwm/: CMakeLists.txt  Kconfig  pwm.c
drivers/drivers/driver/rtc_unified/: CMakeLists.txt  Kconfig  rtc.c
drivers/drivers/driver/security/: CMakeLists.txt
drivers/drivers/driver/security/hash/: CMakeLists.txt  Kconfig  drv_hash.h  sha256.h
drivers/drivers/driver/security_unified/: CMakeLists.txt  Kconfig  drv_flashboot_cipher.c  drv_flashboot_symc.c  drv_pke_weak_func.c  drv_rom_cipher.c
drivers/drivers/driver/security_unified/drv_fapc/: drv_fapc.c
drivers/drivers/driver/security_unified/drv_km/: drv_keyslot.c  drv_klad.c
drivers/drivers/driver/security_unified/mbedtls_harden_adapt/: aes_harden_impl.h  ecp_harden_impl.c  (+7 more)
drivers/drivers/driver/spi/: CMakeLists.txt  Kconfig  spi.c
drivers/drivers/driver/systick/: CMakeLists.txt  Kconfig  systick.c
drivers/drivers/driver/tcxo/: CMakeLists.txt  Kconfig  tcxo.c
drivers/drivers/driver/timer/: CMakeLists.txt  Kconfig  timer.c
drivers/drivers/driver/tsensor/: CMakeLists.txt  tsensor.c
drivers/drivers/driver/uart/: CMakeLists.txt  Kconfig  uart.c
drivers/drivers/driver/watchdog/: CMakeLists.txt  Kconfig  watchdog.c
drivers/drivers/hal/: CMakeLists.txt
drivers/drivers/hal/adc/: CMakeLists.txt  Kconfig  hal_adc.c  hal_adc.h
drivers/drivers/hal/cpu_core/: CMakeLists.txt  hal_cpu_core.c  hal_cpu_core.h
drivers/drivers/hal/dma/: CMakeLists.txt  Kconfig  hal_dma.c  hal_dma.h  hal_dma_mem.c  hal_dma_mem.h
drivers/drivers/hal/efuse/: CMakeLists.txt  Kconfig  hal_efuse.c  hal_efuse.h
drivers/drivers/hal/gpio/: CMakeLists.txt  Kconfig  hal_gpio.c  hal_gpio.h
drivers/drivers/hal/i2c/: CMakeLists.txt  Kconfig  hal_i2c.c  hal_i2c.h
drivers/drivers/hal/mips/: CMakeLists.txt  hal_mips.c  hal_mips.h
drivers/drivers/hal/pinmux/: CMakeLists.txt  Kconfig
drivers/drivers/hal/pmp/: CMakeLists.txt  Kconfig  hal_pmp.c  hal_pmp.h
drivers/drivers/hal/pwm/: CMakeLists.txt  Kconfig  hal_pwm.c  hal_pwm.h
drivers/drivers/hal/reboot/: CMakeLists.txt  hal_reboot.c  hal_reboot.h
drivers/drivers/hal/reg_config/: CMakeLists.txt  hal_reg_config.c  hal_reg_config.h
drivers/drivers/hal/rtc_unified/: CMakeLists.txt  Kconfig  hal_rtc.c  hal_rtc.h
drivers/drivers/hal/security_unified/: CMakeLists.txt  Kconfig
drivers/drivers/hal/sfc/: CMakeLists.txt  hal_sfc.c  hal_sfc.h  hal_sfc_v150.c  hal_sfc_v150.h  hal_sfc_v150_regs_def.h  hal_sfc_v150_regs_op.c  hal_sfc_v150_regs_op.h
drivers/drivers/hal/sio/: CMakeLists.txt  Kconfig  hal_sio.c  hal_sio.h
drivers/drivers/hal/spi/: CMakeLists.txt  Kconfig  hal_spi.c  hal_spi.h
drivers/drivers/hal/tcxo/: CMakeLists.txt  hal_tcxo.c  hal_tcxo.h  hal_tcxo_v150.c  hal_tcxo_v150.h  hal_tcxo_v150_regs_def.h  hal_tcxo_v150_regs_op.c
drivers/drivers/hal/timer/: CMakeLists.txt  hal_drv_timer.c  hal_drv_timer.h
drivers/drivers/hal/tsensor/: CMakeLists.txt  Kconfig  hal_tsensor.c  hal_tsensor.h
drivers/drivers/hal/uart/: CMakeLists.txt  Kconfig  hal_uart.c  hal_uart.h
drivers/drivers/hal/watchdog/: CMakeLists.txt  Kconfig  hal_watchdog.c  hal_watchdog.h
protocol/wifi/: CMakeLists.txt  wifi_alg.cmake
protocol/wifi/source/alg/: CMakeLists.txt  function_alg.cmake
(+3015 files in other folders)
