#===============================================================================
# @brief    cmake make file
# Copyright (c) HiSilicon (Shanghai) Technologies Co., Ltd. 2022-2022. All rights reserved.
#===============================================================================
add_subdirectory(driver ${PROJECT_BINARY_DIR}/driver)
add_subdirectory(hal ${PROJECT_BINARY_DIR}/hal)